# MyShader

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/model/sculpture-bust-of-roza-loewenfeld/source/: _indices.csv  _unique_vertices.csv
assets/model/vtuber-neuro-sama-v3/: Neuro-v3model-Releaseready4.2.mtl  Nurtwinsprevobj.mtl
assets/model/vtuber-neuro-sama-v3/source/: _prop.csv
assets/model/vtuber-neuro-sama-v3/textures/: Neuro-v3model-Releaseready4.2.mtl
assets/shader/: cube.vsh  grid.vsh  highlightcontour.vsh  light.vsh  model.fsh  model.vsh  pick.fsh  pick.vsh  skybox.vsh  water.fsh  water.vsh
include/: CmakeLists.txt  UIrender.h  _camera.h  camera.h  glInit.h  glm.cmake  grid.h  imgui.cmake  input_management.h  mesh.h  model.h  object.h  shader.h  shape.h  singleton_util.h  skybox.h  stb_image.cmake  texture.h  vertexShaderLoader.h  windowrender.h
include/Application/: application.hpp
include/glad/: glad.c
include/glm/: glm.cppm
include/imgui/: CMakeLists.txt
include/stb_image/: stb_image.h
src/: UIrender.cpp  _camera.cpp  camera.cpp  camera.h  gird.cpp  glInit.h  input_management.cpp  main.cpp  mesh.cpp  model.cpp  model.h  object.cpp  shader.cpp  shader.h  shape.cpp  texure.h  trans.cpp  trans.h  vertex.h  vertexShaderLoader.h  windowrender.cpp
src/Application/: application.hpp
src/camera/: camera.cpp  camera.h  orthographicCamera.cpp  orthographicCamera.h  perspectiveCamera.cpp  perspectiveCamera.h
src/cameracontrol/: cameraControl.cpp  cameraControl.h  gameCameraControl.cpp  gameCameraControl.h
src/core/: attribute.h  geometry.cpp  geometry.h  object3D.cpp  object3D.h
src/global/: GLconstant.h  global.h
src/loader/: cache.cpp  cache.h
src/material/: material.cpp  material.h
src/math/: bbox.h
src/shader/: cube.fs  cube.fsh  cube.vs  model.vsh
src/texture/: source.cpp  source.h  texture.cpp  texture.h
src/util/: eventDispatcher.cpp  eventDispatcher.h  identity.cpp  identity.h  singleton_util.h
util/: objectLoder.py
